<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_login">

    <fragment
        android:id="@+id/nav_login"
        android:name="com.lavazza.ciclocafe.ui.login.LoginFragment"
        android:label="@string/login_title"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@+id/nav_home"
            app:popUpTo="@+id/nav_login"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_home"
        android:name="com.lavazza.ciclocafe.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_repartoFragment"
            app:destination="@+id/nav_reparto" />
    </fragment>

    <fragment
        android:id="@+id/nav_reparto"
        android:name="com.lavazza.ciclocafe.ui.reparto.RepartoFragment"
        android:label="Seleccionar Reparto"
        tools:layout="@layout/fragment_reparto">
        <action
            android:id="@+id/action_repartoFragment_to_entradaFragment"
            app:destination="@+id/nav_entrada"
            app:popUpTo="@+id/nav_home"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_repartoFragment_to_salidaFragment"
            app:destination="@+id/nav_salida"
            app:popUpTo="@+id/nav_home"
            app:popUpToInclusive="false" />
        <argument
            android:name="tipo_operacion"
            app:argType="string"
            android:defaultValue="entrada" />
    </fragment>

    <fragment
        android:id="@+id/nav_entrada"
        android:name="com.lavazza.ciclocafe.ui.entrada.EntradaFragment"
        android:label="@string/menu_entrada"
        tools:layout="@layout/fragment_entrada">
        <action
            android:id="@+id/action_entrada_to_reparto"
            app:destination="@+id/nav_reparto" />
    </fragment>

    <fragment
        android:id="@+id/nav_salida"
        android:name="com.lavazza.ciclocafe.ui.salida.SalidaFragment"
        android:label="Salida"
        tools:layout="@layout/fragment_salida">
        <action
            android:id="@+id/action_salida_to_reparto"
            app:destination="@+id/nav_reparto" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.lavazza.ciclocafe.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.lavazza.ciclocafe.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>